portfolio v1.7.4 (fix css issue on firefox)

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@
 }
 
 .icon3 {
-  right: 10px;
+  top: 0px;
+  left: 185px;
 }
 
 .neg-mb-3 {
